Fikser en del tester og sonar